# IISCCapstoneProjectGroup16

./: .env  .gitignore  .ruff.toml  IMPLEMENTATION_SUMMARY.md  MEMORY.md  PREPROCESSING.md  README.md  conftest.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_preprocessing_unstructured.ipynb  setup.py  todo.md
.github/workflows/: cd.yml  ci.yml
app/: gradio_app.py
data/knowledge_base/: payment_policy.md  return_policy.md  shipping_policy.md  warranty_policy.md
data/processed/: product_catalog.schema.json  reviews.schema.json
data/synthetic/: customer_queries.schema.json  customers.schema.json  order_items.schema.json  orders.schema.json  returns.schema.json  synthetic_queries_20260610_192417.csv  synthetic_queries_20260620_151623.csv
docs/: INTEGRATION_EXAMPLE.md  SESSION_PERSISTENCE_SUMMARY.md  build_plan.md  core_workflow_handover.md  core_workflow_quick_start.md  customer_session_persistence.md  pipeline_steps.md  product_agent.md  session_persistence_architecture.md  session_persistence_quick_start.md  test_queries.md
notebooks/: 03_product_agent_demo.ipynb  05_return_agent.ipynb  datapipeline.ipynb
pipelines/: 01_run_twitter_data_pipeline.py  02_run_synthetic_data_pipeline.py  03_build_vector_indexes.py  03_index_product_catalog.py  04_core_smoke_test.py  05_core_readiness_check.py  06_run_core_poc.py  setup_sessions_table.py
scripts/: run_preprocessing.py  run_return_agent_demo.py
src/agents/: __init__.py  common.py  (+8 more)
tests/: test_agents.py  test_memory.py  test_preprocessing.py  test_router.py  test_session_persistence.py
(+105 files in other folders)
