[project]
name = "iisccapstoneprojectgroup16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "datasets>=3.5.0",
    "faker>=37.0.0",
    "dataset>=2.0.0",
    "openai",
    "faker",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.20",
    "mypy>=1.7.0",
    "pandas-stubs>=3.0.3.260530",
    "types-psycopg2"
]